2007-08-30 Thu  Jari Aalto  <jari dot aalto A T cante dot net>

	* etc/template/install.tar.options.tmp: 1.4 Added example for new
	option: --include

	* bin/cygbuild.pl (Version): 1.257 Correct handling of complex
	package name foo-1.80+dbg-0.61.tar.gz

	* bin/cygbuild.sh (function CygbuildShellEnvironenment()): 1.937
	New.
	(function CygbuildRunShell()): 1.937 Slimmed. Moved code to
	`CygbuildShellEnvironenment'
	(function CygbuildCmdBuildMainMakefile()): 1.937 Removed duplicate
	environment code. Use `CygbuildShellEnvironenment'
	(function CygbuildDefineGlobalCompile()): 1.937 Initially
	set CC=gcc and CXX=g++
	(function CygbuildMakefilePrefixCheck()): 1.937 Check
	if there already is custom install.sh and do not display
	message about it.
	(function CygbuildInstallTaropt2match ()): 1.937 Added input
	parameter $type, which control if exclude or include is wanted.
	(function CygbuildInstallPackageDocs()): 1.937 Support new
	--include from install.tar.options
	(function CygbuildPatchPrefixStripCountFromContent()): 1.937
	Removed `mercurical' variable and replaced with generic one.
	(CygbuildInstallPackageDocs): Use builddir, not srcdir for
	installation source directory.

2007-08-29 Wed  Jari Aalto  <jari dot aalto A T cante dot net>

	* bin/cygbuild.sh (function CygbuildCmdPrepPatch()): 1.937
	More accurate check for determining if cygwin patch was
	already applied.

2007-08-28 Tue  Jari Aalto  <jari dot aalto A T cante dot net>

	* bin/cygbuild-rebuild.sh: 1.8 Removed Id. Changed VERSION.

	* bin/cygbuild.sh (function CygbuildCommandMainCheckHelp()): 1.937
	Moved  -V|--version here from `CygbuildCommandMain'.
	(function CygbuildHelpLong()): 1.937 Added new argument $exit.
	(function CygbuildHelpShort()): 1.937 Added new argument $exit.
	(CygbuildHelpShort::NOTES): 1.937 Removed checkout instructions.
	(function CygbuildCygcheckLibraryDepAdjust()): 1.937
	The indentation level proved to be unreliable source of depend
	information. Restoeed old behavior. See