@@ -1,3 +1,8 @@
+2007-09-01 Sat  Jari Aalto  <jari dot aalto A T cante dot net>
+
+	* bin/cygbuild.sh (function CygbuildDefineGlobalCommands()): 1.937
+	Streamlines. The PATH makes sure /usr/bin programs are used.
+
 2007-08-30 Thu  Jari Aalto  <jari dot aalto A T cante dot net>
 
 	* etc/template/install.tar.options.tmp: 1.4 Added example for new
